made the work experience more verbose

--- a/cv.tex
+++ b/cv.tex
@@ -237,12 +237,26 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
       {Research Intern at \textsc{Microsoft Research India}, Bangalore}
       {
          \begin{itemize}[leftmargin=*]
-             \item Optimized \textbf{CScale for concurrency} using \textbf{TPL Dataflow}
-                 for dataflow computations and pipeline processing.
+             \item Studied and analysed the different distributed systems and
+                 databases architectures like \textbf{Google MapReduce}, \textbf{Google FileSystem},
+                 \textbf{Google MillWheel} \textbf{Yahoo! PNUT}, \textbf{Amazon DynamoDB}, \textbf{Apache
+                 Kafka}, \textbf{Apache Spark}, \textbf{Apache Hadoop}, \textbf{Apache Storm},
+                 \textbf{Microsoft Dryad}, \textbf{Microsoft DryadLINQ}
+             \item Optimized \textbf{CScale for concurrency} using \textbf{TPL
+                     Dataflow}.
              \item CScale provides a declarative distributed systems programming
-                 model using LINQ; it handles scaling and failures for the programmer.
-             \item Performed \textbf{failure testing and performance testing}
-                 of the concurrency optimizations in real world scenarios.
+                 model using LINQ. A programmer with no distributed system
+                 experience can specify the computation intent in LINQ and
+                 CScale handles scaling the system and fault tolerance.
+             \item Used \textbf{TPL Dataflow} and \textbf{Lightweight Tasks} to
+                 implement concurrent pipeline processing of messages.
+             \item Developed and implemented a dataflow pipeline for processing
+                 partially ordered messages in order to create a new totally
+                 ordered sequence.
+             \item Performed \textbf{performance testing} of the concurrency optimizations
+                 in real world scenarios leading a gain in processing time.
+             \item Performed \textbf{failure testing} of the Programming model
+                 to uncover detrimental replication errors.
          \end{itemize}
      }
 
@@ -250,10 +264,10 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
       {Software Development at \textsc{Aurus Networks'}, Bangalore}
       {
           \begin{itemize}[leftmargin=*]
-              \item Worked on \textbf{Aurus Networks} MOOC offereing \textbf{CourseHub}.
-              \item Using \textbf{HTML5, javascript, CSS3}, I ported the legacy
-                  \textbf{Flash} based online media player to a multi-platform
-                  Flash/HTML5 media player.
+              \item Worked on \textbf{Aurus Networks} private MOOC offering \textbf{CourseHub}.
+              \item Ported the legacy flash based web player to a technology
+                  agnostic \textbf{HTML5/JavaScript} web player leading to a
+                  uniform cross-platform viewing experience.
               \item Developed a \textbf{XMPP} based \textbf{real-time chat service} for
                   conversations during live lectures.
           \end{itemize}
