--- a/cv.tex
+++ b/cv.tex
@@ -193,7 +193,7 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
                             \textbf{Introduction to Philosophy} \\
     \textsc{2012-2013}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
     \textsc{2011-2012}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
-    \textsc{Fall 2012}   & \textbf{Academic Mentor}, \textbf{Fundamentals of Computer Science (ESC101)}. \\
+    \textsc{Monsoon 2012}   & \textbf{Academic Mentor}, \textbf{Fundamentals of Computer Science (ESC101)}. \\
                          & \footnotesize{Tutored a batch of students in ESC101 --- a core course on
                             basic concepts of programming --- the instructor-in-charge was \textbf{Professor
                             Sumit Ganguly}}\\
@@ -264,7 +264,7 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
 %----------------------------------------------------------------------------------------
 \section{Course Projects}
 
-\project {Fall 2014}
+\project {Monsoon 2014}
          {Multi Factor Authentication in OpenVPN}
          {\textsc{\raggedright Mozilla Winter of Security}, Guillaume Destuynder and Professor Dheeraj Sanghi}
          {This project was one of the eleven projects selected for Mozilla Winter of Security's 2014 edition.
@@ -272,14 +272,14 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
           support and first-class multifactor authentication support to
           OpenVPN.}
 
-\project {Spring 2014}
+\project {Winter 2014}
          {JavaScript to MIPS Compiler}
          {\textsc{\raggedright Compilers}, Professor Subhajit Roy}
          {An end-to-end compiler for a subset of ECMAScript5.1 which compiled to MIPS was implemented in Python.
           No runtime support was provided ergo, static types and type annotations were used instead.
           \href{https://github.com/srijanshetty/javascript-compiler} {[Git Repo]}}
 
-\project {Spring 2014}
+\project {Winter 2014}
          {Hindi author attribution}
          {\textsc{\raggedright Artificial Intelligence}, Professor Amitabha
           Mukherjee}
@@ -291,35 +291,35 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
           The inherent difficult in the project was the unavailability of stemmers and POS taggers for Hindi.
           \href{https://github.com/srijanshetty/author-attribution} {[Git Repo]}}
 
-\project {Fall 2013}
+\project {Monsoon 2013}
          {NachOS}
          {\textsc{Operating Systems}, Professor Mainak Chaudhari}
          {The coursework included implementation of system calls; process
           management and scheduling; memory management schemes and page replacement
           algorithms in \textbf{NachOS}.}
 
-\project {Fall 2013}
+\project {Monsoon 2013}
          {P2P File Sharing and Streaming}
          {\textsc{Computer Networks}, Professor Dheeraj Sanghi}
          {A Node.js based local file server and media playback server was implemented
           to understand the underpinnings of Transport Layer Protocols, socket programming,
           and P2P architecture.  \href{https://github.com/srijanshetty/nodesock} {[Git Repo]}}
 
-\project {Fall 2013}
+\project {Monsoon 2013}
          {IP Spoofing}
          {\textsc{Computer Networks}, Professor Dheeraj Sanghi}
          {The objective of the project was to create raw Internet Protocol packets with a spoofed source
           address. These spoofed packets were then used to implement common exploits like Smurfing,
           ARP Poisoning, DOS attacks.}
 
-\project {Fall 2013}
+\project {Monsoon 2013}
          {Prolog Shortest Paths and Erlang Traffic Server}
          {\textsc{Principles of Programming Languages}, Professor Piyush Kurur}
          {Shortest paths algorithm was implemented in Prolog on the Delhi Metro route
           using Logic Programming. A simple traffic server was also implemented in Erlang
           using message passing concurrency and tail call recursion.}
 
-\project {Spring 2013}
+\project {Winter 2013}
          {8-bit General Purpose Computer on a FPGA}
          {\textsc{Computer Organization}, Professor Subhajit Roy}
          {The GPC had a load-store architecture and was written in System Verilog and
@@ -328,7 +328,7 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
           loops  other basic building blocks of a simple assembly language.
           \href{https://github.com/srijanshetty/220_y11} {[Git Repo]}}
 
-\project {Spring 2013}
+\project {Winter 2013}
          {Conference Dates Web Crawler}
          {\textsc{Computing Laboratory}}
          {A python based web crawler which could obtain paper submission
@@ -336,7 +336,7 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
           with simple pattern matching through regular expressions were used to implement crawling.
           \href{https://github.com/srijanshetty/crawler} {[Git Repo]}}
 
-\project {Fall 2011}
+\project {Monsoon 2011}
          {No situation is unique and certain moral principles can be applied across all situation}
          {\textsc{Introduction to Philosophy}, Professor Vineet Sahu}
          {An argumentative discourse proving that certain moral principles
