Augmented social skills section

--- a/cv.tex
+++ b/cv.tex
@@ -442,9 +442,9 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
              {
                    \begin{itemize}[leftmargin=0.5cm]
                        \item Navya is the resident Free and Open Source Software Group of IIT Kanpur.
-                       \item Promoted the FOSS initiative by giving student lectures.
-                           And worked on student-centred projects like Course Search and Student Search.
-                           \href{https://github.com/navya} {[Git Repo]}
+                       \item Promoted the FOSS initiative in campus by organizing student lectures and meetups.
+                       \item Created student-centric applications like Course Search and Student Search.
+                       \item \href{https://github.com/navya} {https://github.com/navya}
                    \end{itemize}
              }
 
@@ -453,10 +453,6 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
                   {
                        \begin{itemize}[leftmargin=0.5cm]
                            \item Oversaw a team of \textbf{150} students for a span of 8 months.
-                           \item Chalked out the logistics for the hospitality and accommodation of \textbf{1500 students} who
-                               participated in festival.
-                           \item Made sure everything went smoothly during the four days of the Festival from 24$^{th}$
-                               to 27$^{th}$ October.
                        \end{itemize}
                   }
 
@@ -464,11 +460,15 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
                   {Hospitality Coordinator, Antaragni'13}
                   {
                        \begin{itemize}[leftmargin=0.5cm]
-                           \item Oversaw a team of \textbf{150} students for a span of 8 months.
-                           \item Chalked out the logistics for the hospitality and accommodation of \textbf{1500 students} who
+                           \item Transformed the methodology of inviting colleges all around the country by focussing on
+                               college societies rather than the cultural union.
+                           \item Worked with a team of five fellow coordinators in planning the accommodation of 1500 participating students
+                               from all over the country.
+                           \item Helmed a team of 40 secretaries and 80 volunteers tasked with ensuring a flawless conduction of the
+                               festival.
+                           \item Chalked out the logistics for the hospitality of \textbf{1500 students} who
                                participated in festival.
-                           \item Made sure everything went smoothly during the four days of the Festival from 24$^{th}$
-                               to 27$^{th}$ October.
+                           \item Handled security during the four days of the Festival from 24$^{th}$ to 27$^{th}$ October.
                        \end{itemize}
                   }
 
@@ -478,8 +478,8 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
                        \begin{itemize}[leftmargin=0.5cm]
                            \item A brainchild of \textbf{Professor Bhaskardas Gupta}, English Proficiency
                                Programme tries to impart a functional knowledge of English to students.
-                           \item I assisted in the first leg of the programme which focussed in helping
-                               under-privileged students learn English.
+                           \item Worked as a English tutor in the pilot programme which was aimed at helping
+                               under-privileged students from and around IIT Kanpur campus.
                        \end{itemize}
                   }
 
@@ -489,8 +489,8 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
                        \begin{itemize}[leftmargin=0.5cm]
                            \item The GRC was established to revamp the Students' Gymkhana of IIT Kanpur,
                                which is responsible for all the student activities of the institute.
-                           \item I chaired the sessions on \textbf{Extended Orientation of Freshmen}.
-                               And gave inputs to other academic, senate and activities sub-committees formed under the GRC.
+                           \item Chaired the meetings on \textbf{Extended Orientation of Incoming Freshmen}.
+                           \item Contributed actively as a member of academic, senate and activities sub-committees of the GRC.
                        \end{itemize}
                   }
 
